# lem_in

./: CMakeLists.txt  Makefile  author  file.txt  gen.sh  lem-in.h  lem_in.h  map2  map3  map4  read.c  visu-hex
dir/: file1.txt  file2.txt  file3.txt  file4.txt  file5.txt  file6.txt  file7.txt  file8.txt  file9.txt
lem_vis/: CMakeLists.txt  Makefile  in  in2
lem_vis/includes/: vis.h
lem_vis/src/: ants_path.c  controls.c  drawing.c  drawing_utils.c  drawing_utils2.c  ft_find_err.c  init.c  read_utils.c  read_vs.c  vis.c
libft/: Makefile  author  ft_atoi.d  ft_binar_chr.d  ft_bzero.d  ft_count_words.d  ft_isalnum.d  ft_itoa.d  ft_lstadd.d  ft_lstdel.d  ft_lstdelone.d  ft_lstiter.d  ft_lstmap.d  ft_lstnew.d  ft_memalloc.d  ft_memccpy.d  ft_memchr.d  ft_memcmp.d  ft_memcpy.d  ft_memdel.d  ft_memmove.d  ft_memset.d  ft_print_params.d  ft_putchar.d  ft_putchar_fd.d  ft_putendl.d  ft_putendl_fd.d  ft_putnbr.d  ft_putnbr_fd.d  ft_putstr.d  ft_putstr_fd.d  ft_sort_params.d  ft_sqrt.d  ft_strcat.d  ft_strchr.d  ft_strclr.d  ft_strcpy.d  ft_strdel.d  ft_strdup.d  ft_strequ.d  (+18 more)
libft/ft_printf/: additional_func.c  ft_printf.c  print_cs.c  print_d.c  print_efg.c  print_f_func.c  print_oux_p.c  set_flags_n_mods.c  utils.c
libft/includes/: ft_printf.h  libft.h
libft/src/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstrevers.c  ft_lstsize.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  (+36 more)
src/: alg.c  bellman_ford.c  bfs.c  init.c  lem_in.c  moving_ants.c  read.c
srcs/: alg.c  alg2.c  alg_copy_n_free_paths.c  ants_location.c  bellman_ford.c  check_and_read.c  debug.c  init.c  lem-in.c  lem_in.c  moving_ants.c  moving_ants2.c  read.c  read_lines.c  read_points.c  read_reline.c  util_ants.c  util_lines.c  util_slines.c
(+2 files in other folders)
